tests/duplicate_name/duplicate_name.exp
Error --------------------------------------------------------------------------------------------- type_then_var.js:3:5

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   type_then_var.js:3:5
   3| var A: string
          ^

References:
   type_then_var.js:1:11
   1| interface A {}
                ^ [1]


Error --------------------------------------------------------------------------------------------- type_then_var.js:7:5

Cannot declare `B` [1] because the name is already bound. [name-already-bound]

   type_then_var.js:7:5
   7| var B : string;
          ^

References:
   type_then_var.js:5:6
   5| type B = number;
           ^ [1]


Error -------------------------------------------------------------------------------------------- var_then_type.js:3:11

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   var_then_type.js:3:11
   3| interface A {}
                ^

References:
   var_then_type.js:1:5
   1| var A: string
          ^ [1]


Error --------------------------------------------------------------------------------------------- var_then_type.js:7:6

Cannot declare `B` [1] because the name is already bound. [name-already-bound]

   var_then_type.js:7:6
   7| type B = number;
           ^

References:
   var_then_type.js:5:5
   5| var B : string;
          ^ [1]



Found 4 errors
